FIX: Body overflow has fixed

--- a/frontend/src/assets/styles/basics/_base.scss
+++ b/frontend/src/assets/styles/basics/_base.scss
@@ -87,7 +87,7 @@ label {
   font-size: rem(14px);
   line-height: rem(20px);
 
-  box-shadow: inset 0 0 0 2px var(--ds-border-input, $button-board-header);
+  box-shadow: inset 0 0 0 2px $button-board-header;
   transition-property: background-color, border-color, box-shadow;
   transition-duration: 85ms;
   transition-timing-function: ease;
